--- a/eraser-map.yaml
+++ b/eraser-map.yaml
@@ -772,13 +772,6 @@ styles:
         shaders:
             blocks:
                 color: |
-                    //vec2 st = v_texcoord.xy;
-                    //vec2 f_st = fract(st*10.);
-                    //vec2 i_st = floor(st*10.);
-                    // color.rg = f_st;
-                    
-                    //vec2 pct = step(vec2(0.09),f_st);;
-                    //color.rgb -= mix(vec3(0.0,0.060,0.061), vec3(0.35),(1.0-(pct.x * pct.y)));
                     
                     if ( dot(vec3(0.,0.,1.),normal) == 1.0 ) {
                         // If it's a roof
@@ -806,6 +799,41 @@ styles:
 
                     float exp = (zoom - midpoint)/(speed * .2);
                     position.z *= ((1.-min) / (1.+(pow(e, exp)))) + min;
+
+    buildings_grid-hospital:
+        base: polygons
+        texcoords: true
+        shaders:
+            blocks:
+                color: |
+                    
+                    if ( dot(vec3(0.,0.,1.),normal) == 1.0 ) {
+                        // If it's a roof
+                        color.rgb = vec3(.870);
+                    } else {
+                        // is a wall
+                        //color.rgb = vec3(1.0,0.0,0.0);
+                        vec2 st = v_texcoord.xy;
+                        vec2 f_st = fract(st*10.);
+                        vec2 i_st = floor(st*10.);
+                        // color.rg = f_st;
+                    
+                        vec2 pct = step(vec2(0.09),f_st);;
+                        color.rgb = mix(vec3(0.692,0.575,0.586), vec3(0.35),(1.0-(pct.x * pct.y)));
+                    }
+
+                position: |
+                    // scale buildings based on zoom
+                    float e = 2.71828; // natural log
+                    float zoom = u_map_position.z;
+
+                    float min = .1;         // minimum building scale
+                    float midpoint = 16.; // middle of zoom range
+                    float speed = 2.;  // number of zoom levels to transition over
+
+                    float exp = (zoom - midpoint)/(speed * .2);
+                    position.z *= ((1.-min) / (1.+(pow(e, exp)))) + min;
+
 
     buildings_lines:
         base: lines
@@ -1992,11 +2020,12 @@ layers:
                     order: 52
                     style: buildings_grid-univ
                     # color: red
-        # in_hospital:
-        #     filter: { landuse_kind: hospital }
-        #     draw:
-        #         polygons:
-        #             color: red
+        in_hospital:
+            filter: { landuse_kind: hospital }
+            draw:
+                polygons:
+                    order: 52
+                    style: buildings_grid-hospital
         # in_retail:
         #     filter: { landuse_kind: retail }
         #     draw:
