--- a/eraser-map.yaml
+++ b/eraser-map.yaml
@@ -1961,143 +1961,195 @@ layers:
                             # except bridges and tunnels, their outlines should also self-sort
                             order: function() { return 6 + feature.sort_key; }
 
-    buildings-early:
-        data: { source: osm, layer: buildings }
-        filter: 
-            any:
-                # limit show smaller landuse areas to higher zooms
-                - { $zoom: { min: 12 }, area: { min: 200000 }, name: true }
-                - { $zoom: { min: 13 }, area: { min: 100000 }, name: true }
-                - { $zoom: { min: 14 }, area: { min: 500 }, name: true }
-                - { $zoom: { min: 15 }, area: { min: 500 } }
-                - { $zoom: { min: 16 }, area: { min: 100 } }
-                - { $zoom: { min: 17 }, area: { max: 500 } }
-            all:
-                - { $zoom: { max: 18 } }
-        draw:
-            #filter: { not: { location: underground } }
-            polygons:
-                order: 7
-                color: *building2
-            outline:
-                style: lines
-                order: 8
-                color: [0.600, 0.600, 0.600]
-                width: [[14,0.6px], [15,0.65px], [16,1px],[18,1.25px]]
-                extrude: false
-                tile_edges: true
-        in_park:
-            filter: { landuse_kind: [park,forest,nature_reserve,conservation,golf_course,garden] }
-            draw:
-                polygons:
-                    color: *building2
-                outline:
-                    color: [0.600, 0.600, 0.600]
-            golf_course:
-                filter: { landuse_kind: golf_course }
-                draw:
-                    lines:
-                        outline:
-                            color: [0.600, 0.600, 0.600]
-            nature_reserve:
-                filter: { landuse_kind: nature_reserve }
-                draw:
-                    lines:
-                        outline:
-                            color: [0.600, 0.600, 0.600]
-            conservation:
-                filter: { landuse_kind: conservation }
-                draw:
-                    lines:
-                        outline:
-                            color: [0.600, 0.600, 0.600]
-            zoo:
-                filter: { landuse_kind: zoo }
-                draw:
-                    lines:
-                        outline:
-                            color: [0.600, 0.600, 0.600]
-        in_university:
-            filter: { landuse_kind: [university,school] }
-            draw:
-                polygons:
-                    color: *building2
-        in_hospital:
-            filter: { landuse_kind: hospital }
-            draw:
-                polygons:
-                    color: *building2
-#        in_retail:
-#            filter: { landuse_kind: retail }
-#            draw:
-#                polygons:
-#                    color: orange
-
     buildings:
         data: { source: osm }
-        filter: 
-            any:
-                # limit show smaller landuse areas to higher zooms
-                - { $zoom: { min: 15 }, height: { min: 190 } }
-                - { $zoom: { min: 16 }, height: { min: 100 } }
-                - { $zoom: { min: 15 }, area: { min: 5000 } }
-                - { $zoom: { min: 16 }, area: { min: 3500 } }
-                - { $zoom: { min: 17 }, area: { min: 500 } }
-                - { $zoom: { min: 18 } }
 
+        # set default footprint and extrusion draw properties, but don't draw by default (rules below will turn visibility on)
         draw:
             polygons:
+                visible: false
                 order: 50
-                color: [.65, .65, .65]
-
-        # turn interactive feature selection on for buildings with names
-        interactive:
-            filter: { name: true }
-            draw: { polygons: { interactive: true } }
-
-        # extrude 3d buildings
-        extruded:
-            filter: { $zoom: { min: 15 } }
+                color: *building2
+            outline:
+                visible: false
+                style: lines
+                order: 51
+                color: [0.600, 0.600, 0.600]
+                width: [[14,0.6px], [15,0.65px], [16,1px], [18,1.25px]]
+                
+        footprints:
+            filter:
+                $zoom: { max: 17 }
+                any:
+                    # show footprints for buildings one zoom level before they will be extruded
+                    - { $zoom: { min: 14 }, height: { min: 190 } }
+                    - { $zoom: { min: 14 }, area: { min: 5000 } }
+                    - { $zoom: { min: 15 }, height: { min: 100 } }
+                    - { $zoom: { min: 15 }, area: { min: 3500 } }
+                    - { $zoom: { min: 16 } }
             draw:
                 polygons:
+                    visible: true
+                outline:
+                    visible: true
+
+        extrude:
+            filter:
+                any:
+                    # same rules as above, but +1 zoom level
+                    - { $zoom: { min: 15 }, height: { min: 190 } }
+                    - { $zoom: { min: 15 }, area: { min: 5000 } }
+                    - { $zoom: { min: 16 }, height: { min: 100 } }
+                    - { $zoom: { min: 16 }, area: { min: 3500 } }
+                    - { $zoom: { min: 17 } }
+            draw:
+                polygons:
+                    visible: true
                     style: buildings_grid
                     extrude: true
+                    color: [.65, .65, .65]
                 outline:
+                    visible: true
                     style: buildings_lines
-                    order: 51
-                    color: [0.600, 0.600, 0.600]
-                    width: [[14,0.1px],[16,1px],[18,1.25px]]
                     extrude: true
-                    tile_edges: true
 
-        # high-line:
-        #     filter: { roof_material: grass }
-        #     draw:
-        #         polygons:
-        #             color: red
+    # buildings-early:
+    #     data: { source: osm, layer: buildings }
+    #     filter: 
+    #         any:
+    #             # limit show smaller landuse areas to higher zooms
+    #             - { $zoom: { min: 12 }, area: { min: 200000 }, name: true }
+    #             - { $zoom: { min: 13 }, area: { min: 100000 }, name: true }
+    #             - { $zoom: { min: 14 }, area: { min: 500 }, name: true }
+    #             - { $zoom: { min: 15 }, area: { min: 500 } }
+    #             - { $zoom: { min: 16 }, area: { min: 100 } }
+    #             - { $zoom: { min: 17 }, area: { max: 500 } }
+    #         all:
+    #             - { $zoom: { max: 18 } }
+    #     draw:
+    #         #filter: { not: { location: underground } }
+    #         polygons:
+    #             order: 7
+    #             color: *building2
+    #         outline:
+    #             style: lines
+    #             order: 8
+    #             color: [0.600, 0.600, 0.600]
+    #             width: [[14,0.6px], [15,0.65px], [16,1px],[18,1.25px]]
+    #             extrude: false
+    #             tile_edges: true
+    #     in_park:
+    #         filter: { landuse_kind: [park,forest,nature_reserve,conservation,golf_course,garden] }
+    #         draw:
+    #             polygons:
+    #                 color: *building2
+    #             outline:
+    #                 color: [0.600, 0.600, 0.600]
+    #         golf_course:
+    #             filter: { landuse_kind: golf_course }
+    #             draw:
+    #                 lines:
+    #                     outline:
+    #                         color: [0.600, 0.600, 0.600]
+    #         nature_reserve:
+    #             filter: { landuse_kind: nature_reserve }
+    #             draw:
+    #                 lines:
+    #                     outline:
+    #                         color: [0.600, 0.600, 0.600]
+    #         conservation:
+    #             filter: { landuse_kind: conservation }
+    #             draw:
+    #                 lines:
+    #                     outline:
+    #                         color: [0.600, 0.600, 0.600]
+    #         zoo:
+    #             filter: { landuse_kind: zoo }
+    #             draw:
+    #                 lines:
+    #                     outline:
+    #                         color: [0.600, 0.600, 0.600]
+    #     in_university:
+    #         filter: { landuse_kind: [university,school] }
+    #         draw:
+    #             polygons:
+    #                 color: *building2
+    #     in_hospital:
+    #         filter: { landuse_kind: hospital }
+    #         draw:
+    #             polygons:
+    #                 color: *building2
+    # #        in_retail:
+    # #            filter: { landuse_kind: retail }
+    # #            draw:
+    # #                polygons:
+    # #                    color: orange
 
-        in_park:
-            filter: { landuse_kind: [park,forest,nature_reserve,conservation,golf_course,garden] }
-            draw:
-                polygons:
-                    style: buildings_grid-parks
-        in_university:
-            filter: { landuse_kind: [university,school] }
-            draw:
-                polygons:
-                    order: 52
-                    style: buildings_grid-univ
-                    # color: red
-        in_hospital:
-            filter: { landuse_kind: hospital }
-            draw:
-                polygons:
-                    style: buildings_grid-hospital
-        in_retail:
-            filter: { landuse_kind: retail }
-            draw:
-                polygons:
-                    style: buildings_grid-retail
+    # buildings:
+    #     data: { source: osm }
+    #     filter: 
+    #         any:
+    #             # limit show smaller landuse areas to higher zooms
+    #             - { $zoom: { min: 15 }, height: { min: 190 } }
+    #             - { $zoom: { min: 16 }, height: { min: 100 } }
+    #             - { $zoom: { min: 15 }, area: { min: 5000 } }
+    #             - { $zoom: { min: 16 }, area: { min: 3500 } }
+    #             - { $zoom: { min: 17 }, area: { min: 500 } }
+    #             - { $zoom: { min: 18 } }
+
+    #     draw:
+    #         polygons:
+    #             order: 50
+    #             color: [.65, .65, .65]
+
+    #     # turn interactive feature selection on for buildings with names
+    #     interactive:
+    #         filter: { name: true }
+    #         draw: { polygons: { interactive: true } }
+
+    #     # extrude 3d buildings
+    #     extruded:
+    #         filter: { $zoom: { min: 15 } }
+    #         draw:
+    #             polygons:
+    #                 style: buildings_grid
+    #                 extrude: true
+    #             outline:
+    #                 style: buildings_lines
+    #                 order: 51
+    #                 color: [0.600, 0.600, 0.600]
+    #                 width: [[14,0.1px],[16,1px],[18,1.25px]]
+    #                 extrude: true
+    #                 tile_edges: true
+
+    #     # high-line:
+    #     #     filter: { roof_material: grass }
+    #     #     draw:
+    #     #         polygons:
+    #     #             color: red
+
+    #     in_park:
+    #         filter: { landuse_kind: [park,forest,nature_reserve,conservation,golf_course,garden] }
+    #         draw:
+    #             polygons:
+    #                 style: buildings_grid-parks
+    #     in_university:
+    #         filter: { landuse_kind: [university,school] }
+    #         draw:
+    #             polygons:
+    #                 order: 52
+    #                 style: buildings_grid-univ
+    #                 # color: red
+    #     in_hospital:
+    #         filter: { landuse_kind: hospital }
+    #         draw:
+    #             polygons:
+    #                 style: buildings_grid-hospital
+    #     in_retail:
+    #         filter: { landuse_kind: retail }
+    #         draw:
+    #             polygons:
+    #                 style: buildings_grid-retail
 
 
     # buildings-early:
